# silvanus

./: .env.example  .gitignore  ENVIRONMENT_CLEANUP.md  LICENSE  README.md  debug_deploy_minimal.js  debug_validation_bypass.py  hardhat.config.debug.js  hardhat.config.js  main.py  package-lock.json  package.json  poller.py  render.yaml  requirements.txt  wallets.json
api/: README.md  auth.py  auth_middleware.py  blockchain_guard.py  database.py  main.py  polling.py  rate_limiting.py  security_logging.py  security_middleware.py  validation.py  validation_decorator.py
contracts/: DAOTreasury.sol  GreenRewardDistributor.sol  Greeter.sol  SVNPresale.sol  Silvanus.sol  SilvanusToken.sol  TokenTimelock.sol
dashboard/: package-lock.json
patches/: @nomicfoundation+hardhat-ethers+3.0.9.patch
python/: check_wallet_balance.py  ev_data_ingest.py  ev_data_simulator.py  ev_logs.json  ev_scoring.py  ev_stream.py  mint_rewards.py  reward_calculator.py  reward_ledger.json  scored_logs.json  test_greenchain_api.py  test_rewards_api.py  wallet_manager.py  wallets.json
scripts/: BurnTest.js  check.js  check_contract_bytecode.js  check_green_events.js  check_owner.js  debug.js  deploy.js  deploy_all.js  deploy_distributor.js  deploy_presale.js  fund_all.js  fund_distributor.js  interact.js  minimal_test.js  test_withdraw_funds.js  upgrade-silvanus.js
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: async_usage.py  basic_usage.py  oauth_flow.py
sdk/python/silvanus_sdk/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_client.py
(+35 files in other folders)
