[tool.poetry]
name = "silvanus-sdk"
version = "0.1.0"
description = "Python SDK for the Silvanus Green Energy Rewards API"
authors = ["Silvanus Team <support@silvanus.com>"]
readme = "README.md"
packages = [{include = "silvanus_sdk"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.25.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
web3 = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
